# shift-python

./: .gitignore  .gitmodules  CMakeLists.txt  Developer's Guide.md  DeveloperGuide.html  DeveloperGuide.md  PythonClient.pro  PythonClient64.pro  README.html  README.md  credentials.py  demo.py  mingw64-build.sh  setup.py  win-build-clientx86.sh  win-build-pybind11x86.sh
.github/ISSUE_TEMPLATE/: feature.md  general-issue-template.md  general.md
conda/: meta.yaml
conda/quickfix/: build.sh  meta.yaml
conda/shift-coreclient/: bld.bat  meta.yaml
conda/shift-miscutils/: bld.bat  meta.yaml
conda/shift-python/: build.sh  meta.yaml
demo/: credentials.py  demo.py  goodcbfs.py  initiator.cfg  zitrader.py
docker/: Dockerfile  setup.sh
include/: BestPrice.h  Common.h  Order.h  OrderBook.h  OrderBookEntry.h  PortfolioItem.h  PortfolioSummary.h  Quote.h  QuoteRequest.h  Trader.h
release/: INSTALL.md
release/conda/: build.sh  build_linux.sh  build_macos.sh
release/conda/quickfix/: bld.bat  build.sh  meta.yaml
release/conda/shift-coreclient/: build.sh  meta.yaml
release/conda/shift-miscutils/: bld.bat  build.sh  meta.yaml
release/conda/shift-python/: bld.bat  build.sh  meta.yaml
release/docker/: Dockerfile  docker-compose.yml
release/docker/notebooks/: demo.ipynb  initiator.cfg
release/dockercompose/: Dockerfile  docker-compose.yml
release/dockercompose/notebooks/: Demo.ipynb
release/dockerfile/: Dockerfile  setup.sh
scripts/: setup-linux-x86.sh  setup-mac-arm.sh  update-rate-limit-linux-x86.sh
src/: SHIFT.cpp  Trader.cpp
